--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
-    "tsparticles": "^3.5.0"
+    "tsparticles": "^3.5.0",
+    "@emailjs/browser": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
